# MinCaml

./: .gitignore  MinCaml.opam  README.md  dune-workspace
src/: alpha.ml  assoc.ml  beta.ml  calc.ml  closure.ml  constFold.ml  d.ml  dune  elim.ml  err.ml  id.ml  inline.ml  kNormal.ml  lexer.mll  m.ml  parser.mly  py.py  syntax.ml  type.ml  typing.ml  utilList.ml
tests/lexerParser/: dune  test_lexerParser.ml
tests/typing/: dune  test_typing.ml
